[project]
name = "dreamlight"
description = "Comfyui wrapper of Dreamlight by yongliu20"
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["torch>=2.0.1", "diffusers==0.33.1", "transformers", "numpy", "Pillow", "huggingface_hub", "safetensors", "comfyui", "python-dotenv"]

[project.urls]
Repository = "https://github.com/APZmedia/ComfyUI-Dreamlight"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/APZmedia/ComfyUI-Dreamlight/wiki"
"Bug Tracker" = "https://github.com/APZmedia/ComfyUI-Dreamlight/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Dreamlight"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

